2024-06-11
	awklib - static variable prefixes updated
	awklib_ch_num.awk  1.1.1 - check before indexing the tables
	awklib_str_set.awk 1.1 - str_set_*_arr() function added
	awklib_str_set.awk 1.0 added with tests

2024-06-10
	awklib_str_set.awk 1.0 added with tests
	awklib_eos.awk 1.0.1 - minor improvements

2022-11-27
	awklib_map.awk 2.0 -> 2.1
	map_set_vals_to() added

2022-02-07
	awklib_graph.awk 1.0 added

2022-01-27
	awklib_ch_num.awk 1.0 -> 1.1
	hex constants replaced with decimals; portable across awk implementations

2022-01-24
	added awklib_bitwise.awk 1.0

2022-01-18
	awklib_prefix_tree.awk 1.2 -> 1.3
	pft_insert(), pft_path_has(), pft_rm() optimized
	_pft_add() returns result

2022-01-14
	awklib_prefix_tree.awk 1.1 -> 1.2
	pft_insert() optimized; no more array transformations
	pft_unmark() added
	pft_cat() checks explicitly against "" instead of !

2021-11-30
	awklib_gtree.awk 1.0 -> 1.1
	gtr_{mark,unmark,is_marked}() added

	awklib_map.awk 1.0 -> 2.0
	map_add() now map_set()
	map_get_val() now map_get()
	map_is_empty() added

2021-11-20
	awklib_prefix_tree.awk v1.0 -> v1.1
	pft_rm() added